[package]
name = "hermit-action-center"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = { version = "0.31", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.1"
resvg = "0.45.0"
usvg = "0.45.0"
tiny-skia = "0.11.4"
egui-phosphor = { version = "0.9", features = ["bold"] }
parking_lot = "0.12.1"
ctrlc = "3.4.0"